--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: jekyll-theme-minimal
 # Customize the style
 title: [Yin's Homepage]
 #description: [The description is left with empty because the owner of the page is currently searching for her life purpose.]
-description:[404]
+description:[-Not Found-]
 baseurl: /
 
 #assets
