change the index

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ theme: jekyll-theme-minimal
 # Customize the style
 title: [Yin's Homepage]
 #description: [The description is left with empty because the owner of the page is currently searching for her life purpose.]
-description: [-404 Not Found-]
+description: [Welcome to my homepage, and thanks for starting the conversation :) ]
 baseurl: /
 
 #assets
-logo: /assets/img/logo.png
+logo: /assets/img/logo_new.png
 
 #config
 blog: true
